prevents the text overflow issues on the winner dialog

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,9 @@
 .nameOfWinner{
   width:100%;
   font-size:220px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .sassy-announce{
